# trusted_wav

./: README.md  pyproject.toml
src/: transform_wav.py
src/transform_wav.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
