[project]
name = "transform_wav"
version = "0.0.1"
authors = [
  { name="Suriya Ganesh", email="sayyampe@andrew.cmu.edu" },
]
description = "Simple utility to transform wav files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/suriya-ganesh/transform_wav"
Issues = "https://github.com/suriya-ganesh/transform_wav/issues"